# Market-RRRResearch

./: .env  README.md  app.py  brad_analysis_agents.py  brad_analysis_tasks.py  main.py  main2.py  main3.py  main4.py  main5.py  pyproject.toml  requirements.txt  vercel.json
static/: frontend.js  index.html
tools/: image_search_tools.py  search_tools.py  sec_tools.py
